--- a/DTS.Web/Areas/User/Views/Document/Index.cshtml
+++ b/DTS.Web/Areas/User/Views/Document/Index.cshtml
@@ -142,6 +142,54 @@
   </div>
 </div>
 
+<div class="modal fade" id="modalPrintDocument" tabindex="-1" role="dialog" aria-labelledby="modalPrintDocumentLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Print Document</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id = "iconClosePrintDocument">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id = "modalPrintDocumentBody">
+          
+          <div class="d-flex justify-content-center mb-4">
+              <div id="qrcode"></div>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Tracking Code:</label>
+              <strong id='printDocumentTrackingCode'></strong>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Department:</label>
+              <strong id='printDocumentDepartmentName'></strong>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Title:</label>
+              <strong id='printDocumentTitle'></strong>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Content:</label>
+              <strong id='printDocumentContent'></strong>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Request Type:</label>
+              <strong id='printDocumentRequestTypeTitle'></strong>
+          </div>
+          <div>
+              <label for="message-text" class="col-form-label">Remarks:</label>
+              <strong id='printDocumentRemarks'></strong>
+          </div>
+           
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id = "btnClosePrintDocument">Close</button>
+        <button type="button" class="btn btn-primary" id = "btnPrintDocument">Print</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 @section Scripts
 {
     <script type="text/javascript">
@@ -299,10 +347,22 @@
                                           errors = [];                                 
         }
         
-          $('#updateCloseModalIcon, #updateCloseModalButton').click(function() {
+          $('#updateCloseModalIcon, #updateCloseModalButton' ).click(function() {
                 $('#modalUpdateDocument').modal('hide');
             });
-        
+         
+           $('#btnClosePrintDocument, #iconClosePrintDocument').click(function() {
+                 $('#modalPrintDocument').modal('hide');
+             });
+         
+         $('#btnRefreshDataTable').click(function (e){
+             refreshDatatable();
+         })
+         
+         $('#btnPrintDocument').click(function (e){
+                 printJS('docs/printjs.pdf')
+         })
+          
         $('#btnSaveChangesDocument').on('click', function (e){                   
                                  let departmentId = parseInt($('#departmentId').val());
                                   let requestTypeId = parseInt($('#requestTypeId').val());
