--- a/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
+++ b/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
 
-    
+       <link rel="stylesheet" href="https://printjs-4de6.kxcdn.com/print.min.css" />
 
 </head>
 
@@ -574,6 +574,9 @@
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.4/dist/quill.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/simple-notify@1.0.4/dist/simple-notify.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js" integrity="sha512-CNgIRecGo7nphbeZ04Sc13ka07paqdeTu0WR1IM4kNcpmBAUSHSQX0FslNhTDadL4O5SAGapGt4FodqL8My0mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
+
  
 
 <!-- main JS -->
